@@ -10,7 +10,7 @@ record = RECORD
 
 [bdist_wininst]
 install-script=cr_shortcut.py
-bitmap=backup/docs/tkbackup.bmp
+bitmap=backup/docs/tkbak.bmp
 
 [bdist_msi]
 install-script=cr_shortcut.py
